api/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.13.0-alpine
          ports:
            - containerPort: 4180
              protocol: TCP
              name: http
            - containerPort: 9090
              protocol: TCP
              name: http-metrics
          startupProbe:
            httpGet:
              path: /ping
              port: 4180
            periodSeconds: 5
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
            periodSeconds: 5
            failureThreshold: 3
          args:
            - "--client-id=$(CLIENT_ID)"
            - "--client-secret=$(CLIENT_SECRET)"
            - "--cookie-secret=$(COOKIE_SECRET)"
            - "--http-address=0.0.0.0:4180"
            - "--metrics-address=0.0.0.0:9090"
            - "--code-challenge-method=S256"
            - "--oidc-issuer-url=https://sso.sogeor.com/realms/system"
            - "--provider=keycloak-oidc"
            - "--exclude-logging-path=/ping,/ready"
            - "--email-domain=*"
            - "--redirect-url=https://api.sogeor.com/oauth2/callback"
            - "--reverse-proxy=true"
            - "--skip-provider-button=true"
            - "--whitelist-domain=api.sogeor.com"
            - "--allowed-role=api-explorer"
            - "--upstream=http://cart.api.svc.cluster.local:9090/cart/"
            - "--upstream=http://inventory.api.svc.cluster.local:9090/inventory/"
            - "--upstream=http://notifications.api.svc.cluster.local:9090/notifications/"
            - "--upstream=http://orders.api.svc.cluster.local:9090/orders/"
            - "--upstream=http://payments.api.svc.cluster.local:9090/payments/"
            - "--upstream=http://products.api.svc.cluster.local:9090/products/"
