api/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: api
  labels:
    app.kubernetes.io/name: oauth2-proxy-service
spec:
  selector:
    app.kubernetes.io/name: oauth2-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
    - protocol: TCP
      port: 9090
      targetPort: http-metrics
      name: http-metrics
  type: ClusterIP
