api/oauth2-proxy/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: api
spec:
  hosts:
    - "api.sogeor.com"
  gateways:
    - "istio-system/master"
  http:
    - match:
        - uri:
            prefix: /oauth2
        - uri:
            prefix: /v1/docs-server
        - uri:
            prefix: /v1/cart/actuator/openapi
        - uri:
            prefix: /v1/inventory/actuator/openapi
        - uri:
            prefix: /v1/notifications/actuator/openapi
        - uri:
            prefix: /v1/orders/actuator/openapi
        - uri:
            prefix: /v1/payments/actuator/openapi
        - uri:
            prefix: /v1/products/actuator/openapi
      route:
        - destination:
            port:
              number: 8080
            host: oauth2-proxy.api.svc.cluster.local
  exportTo:
    - "istio-system"
